# hummbl-agent-federation

./: .base120ignore  .gitignore  .markdownlint.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CI_AUDIT_REPORT.md  CLAUDE.md  COMPREHENSIVE_SITREP.md  CONTRIBUTING.md  EXECUTIVE_SUMMARY.md  GOVERNANCE.md  README.md  REPOSITORY_UNDERSTANDING_REPORT.md  SECURITY.md  SITREP_README.md  package-lock.json  package.json  pyproject.toml
_state/: CURRENT_STATE.md  CURRENT_STATE.template.md  RUNBOOK.md  TODO.md
agents/: architect.md  build-error-resolver.md  code-reviewer.md  database-reviewer.md  doc-updater.md  e2e-runner.md  hummbl-architect.md  hummbl-gas-agent.md  hummbl-planner.md  openclaw-security.md  planner.md  refactor-cleaner.md  security-reviewer.md  sitrep-generator.md  tdd-guide.md  transformation-guide.md
commands/: apply-transformation.md  build-fix.md  checkpoint.md  code-review.md  e2e.md  eval.md  learn.md  orchestrate.md  plan-with-base120.md  plan.md  refactor-clean.md  setup-pm.md  sitrep.md  summarize-session.md  tdd.md  test-coverage.md  update-codemaps.md  update-docs.md  verify-hummbl.md  verify.md
configs/: cost-policy.json  experiment-policy.json  network-policy.json  openclaw-security-policy.json  process-policy.allowlist  secrets-policy.json  secrets-registry.yaml
docs/: RUNNER_KERNEL_INTERFACE.md  SECRETS_LIFECYCLE.md  SITREP.md  SPEC_TRANSFORMATIONS.md  THREAT_MODEL_RUNNERS.md  base120-skill-map.md  base120-skill-template.md  base120.v1.0.canonical.json  communication-enablement.md  evidence-import-example.md  evidence-import.md  evidence-sitrep-flow.md  experiment-approval-checklist.md  experiment-mode.md  experiment-run-walkthrough.md  governed-model-call.md  llm-enablement.md  local-places-flow.md  runner-howto.md  runner-manual-ui-log.md  sitrep-lint-checklist.md  sitrep-schema.md  skill-routing-flow.md  validation-checklist.md  workflow-examples.md  workflows-index.md
examples/: README.md
k8s/: deployment.yaml
logs/: SITREP-2026-02-05-federation-gaas-planning.md
scripts/: README.md  build-request.cjs  check-kernel-decision.sh  e2e-validate.sh  experiment-run.sh  gas-e2e-validate.sh  gas-rollback.sh  generate-base120-skill-map.cjs  generate-sitrep.sh  import-observation.sh  lint-action-space.sh  lint-artifact-secrets.sh  lint-base120-registry-consistency.sh  lint-base120-skill-map.sh  lint-comm-configs.mjs  lint-esm.mjs  lint-evidence.sh  lint-gas-policy.sh  lint-llm-configs.mjs  lint-network-policy.sh  lint-no-clawdhub.mjs  lint-no-external-registry-deps.mjs  lint-no-server.sh  lint-no-ts-tests.sh  lint-openclaw-security.sh  lint-router-exports.sh  lint-runner-capabilities.sh  lint-runner-compatibility.sh  new-run.sh  (+18 more)
(+339 files in other folders)
